Add startup-only SIMD chunk generation configuration